--- a/app/src/main/res/navigation/ia_navigation.xml
+++ b/app/src/main/res/navigation/ia_navigation.xml
@@ -6,11 +6,11 @@
     app:startDestination="@+id/moexFragment">
 
 
-    <fragment
-        android:id="@+id/recommendationsFragment"
-        android:name="com.invest.advisor.ui.recommendations.RecommendationsFragment"
-        android:label="@string/recommendations"
-        tools:layout="@layout/fragment_recommendations" />
+<!--    <fragment-->
+<!--        android:id="@+id/recommendationsFragment"-->
+<!--        android:name="com.invest.advisor.ui.recommendations.RecommendationsFragment"-->
+<!--        android:label="@string/recommendations"-->
+<!--        tools:layout="@layout/fragment_recommendations" />-->
 
     <fragment
         android:id="@+id/portfolioFragment"
