--- a/app/src/main/res/layout/fragment_analitics.xml
+++ b/app/src/main/res/layout/fragment_analitics.xml
@@ -1,49 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <data>
+
+    </data>
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/text_analitics"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/roboto"
-            android:textAlignment="viewStart"
-            android:textSize="14sp"
-            android:visibility="gone"
-            tools:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/analitics" />
+            android:orientation="vertical">
 
-        <com.github.mikephil.charting.charts.PieChart
-            android:visibility="gone"
-            android:id="@+id/pieChart"
-            android:layout_weight="1"
-            android:minHeight="400dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/text_analitics"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/roboto"
+                android:textAlignment="viewStart"
+                android:textSize="14sp"
+                android:visibility="gone"
+                tools:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/analitics" />
 
-        <com.github.mikephil.charting.charts.PieChart
-            android:visibility="gone"
-            android:id="@+id/sectorChart"
-            android:minHeight="400dp"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <com.github.mikephil.charting.charts.PieChart
+                android:visibility="gone"
+                android:id="@+id/pieChart"
+                android:layout_weight="1"
+                android:minHeight="400dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <com.github.mikephil.charting.charts.PieChart
+                android:visibility="gone"
+                android:id="@+id/sectorChart"
+                android:minHeight="400dp"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
 
-    </LinearLayout>
-</ScrollView>
+        </LinearLayout>
+    </ScrollView>
+</layout>
 
