--- a/app/src/main/res/layout/detailed_portfolio_item_fragment.xml
+++ b/app/src/main/res/layout/detailed_portfolio_item_fragment.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.portfolio.detailedPortfolioItem.DetailedPortfolioItemFragment">
+        tools:context=".ui.detailedPortfolioItem.DetailedPortfolioItemFragment">
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/group_loading"
