--- a/app/src/main/res/layout/fragment_moex.xml
+++ b/app/src/main/res/layout/fragment_moex.xml
@@ -12,7 +12,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.moex.MoexFragment">
+        tools:context=".ui.moexsecurities.MoexSecuritiesListFragment">
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/group_loading"
@@ -66,7 +66,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/item_moex" />
+            tools:listitem="@layout/item_moex_security" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
