--- a/app/src/main/res/layout/item_portfolio_card.xml
+++ b/app/src/main/res/layout/item_portfolio_card.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="4dp"
-        android:layout_marginStart="@dimen/margin_2x"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="@dimen/margin_list_items"
         android:minHeight="?listPreferredItemHeightSmall"
         app:cardCornerRadius="4dp">
 
