--- a/app/src/main/res/layout/fragment_add_moex_sec_item.xml
+++ b/app/src/main/res/layout/fragment_add_moex_sec_item.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:text="Колличество:"
+            android:text="@string/quantity"
             android:textAlignment="center"
             android:textSize="14sp"
 
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
-            android:text="10"
+            android:text="@string/_10"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:text="Цена акции:"
+            android:text="@string/share_price"
             android:textAlignment="center"
             android:textSize="14sp"
 
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
-            android:text="100"
+            android:text="@string/_100"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="Дата:"
+            android:text="@string/date"
             android:textAlignment="center"
             android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@+id/tvDateVal"
@@ -90,7 +90,7 @@
             android:id="@+id/tvDateVal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="01.04.2024"
+            android:text="@string/_01_04_2024"
             android:textAlignment="center"
             android:textColor="@color/colorAccent"
             android:textSize="14sp"
@@ -105,7 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Итоговая сумма:"
+            android:text="@string/total_sum"
             android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@+id/textView_totalMoney_is"
             app:layout_constraintHorizontal_bias="0.5"
@@ -118,7 +118,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="500"
+            android:text="@string/_500"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -132,7 +132,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:text="Добавить"
+            android:text="@string/add"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
