--- a/app/src/main/res/layout/fragment_detailed_moex_security_item.xml
+++ b/app/src/main/res/layout/fragment_detailed_moex_security_item.xml
@@ -26,9 +26,9 @@
             android:id="@+id/pager"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="@dimen/margin_standart"
+            android:layout_marginStart="@dimen/margin_std"
             android:layout_marginTop="@dimen/margin_half"
-            android:layout_marginEnd="@dimen/margin_standart"
+            android:layout_marginEnd="@dimen/margin_std"
             android:layout_marginBottom="@dimen/margin_half"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
