--- a/app/src/main/res/layout/fragment_moex_securities_list.xml
+++ b/app/src/main/res/layout/fragment_moex_securities_list.xml
@@ -45,7 +45,7 @@
             android:layout_marginTop="@dimen/margin_half"
             android:layout_marginEnd="@dimen/margin_half"
             android:layout_marginBottom="@dimen/margin_half"
-            android:text="Loading"
+            android:text="@string/loading"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
