--- a/app/src/main/res/layout/fragment_moex_security_item_info.xml
+++ b/app/src/main/res/layout/fragment_moex_security_item_info.xml
@@ -43,7 +43,7 @@
             android:layout_marginTop="@dimen/margin_half"
             android:layout_marginEnd="@dimen/margin_half"
             android:layout_marginBottom="@dimen/margin_half"
-            android:text="Loading"
+            android:text="@string/loading"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="GAZPROM"
+            android:text="@string/gazprom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -128,7 +128,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Previous Close"
+            android:text="@string/previous_close"
             app:layout_constraintEnd_toStartOf="@+id/tvPrevCloseVal"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -142,7 +142,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="N/A"
+            android:text="@string/n_a"
             app:layout_constraintBottom_toBottomOf="@+id/tvPrevClose"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -156,7 +156,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Open"
+            android:text="@string/open"
             app:layout_constraintEnd_toStartOf="@+id/tvOpenVal"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -170,7 +170,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="N/A"
+            android:text="@string/n_a"
             app:layout_constraintBottom_toBottomOf="@+id/tvOpen"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -185,7 +185,7 @@
             android:layout_height="wrap_content"
 
             android:layout_marginTop="16dp"
-            android:text="Volume"
+            android:text="@string/volume"
             app:layout_constraintEnd_toStartOf="@+id/tvVolumeVal"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -199,7 +199,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="N/A"
+            android:text="@string/n_a"
             app:layout_constraintBottom_toBottomOf="@+id/tvVolume"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -215,7 +215,7 @@
             android:layout_height="wrap_content"
 
             android:layout_marginTop="16dp"
-            android:text="Market Cap"
+            android:text="@string/market_cap"
             app:layout_constraintEnd_toStartOf="@+id/tvMarketCapVal"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -229,7 +229,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="N/A"
+            android:text="@string/n_a"
             app:layout_constraintBottom_toBottomOf="@+id/tvMarketCap"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -243,7 +243,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Beta"
+            android:text="@string/beta"
             app:layout_constraintEnd_toStartOf="@+id/tvBetaVal"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -257,7 +257,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="N/A"
+            android:text="@string/n_a"
             app:layout_constraintBottom_toBottomOf="@+id/tvBeta"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -271,7 +271,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="ROE"
+            android:text="@string/roe"
             app:layout_constraintEnd_toStartOf="@+id/tvROEVal"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -285,7 +285,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="N/A"
+            android:text="@string/n_a"
             app:layout_constraintBottom_toBottomOf="@+id/tvROE"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -299,7 +299,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="ROA"
+            android:text="@string/roa"
             app:layout_constraintEnd_toStartOf="@+id/tvROAVal"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -313,7 +313,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="N/A"
+            android:text="@string/n_a"
             app:layout_constraintBottom_toBottomOf="@+id/tvROA"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
