--- a/app/src/main/res/layout/fragment_portfolio.xml
+++ b/app/src/main/res/layout/fragment_portfolio.xml
@@ -41,7 +41,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom"
-                        android:layout_marginVertical="@dimen/margin_standart"
+                        android:layout_marginVertical="@dimen/margin_std"
                         android:gravity="center"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                         app:layout_collapseMode="pin"
