--- a/app/src/main/res/layout/item_portfolio_card.xml
+++ b/app/src/main/res/layout/item_portfolio_card.xml
@@ -72,7 +72,7 @@
                 android:id="@+id/icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_standart"
+                android:layout_margin="@dimen/margin_std"
                 android:background="@drawable/ripple_circular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
