--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="margin_half">8dp</dimen>
-    <dimen name="margin_standart">16dp</dimen>
+    <dimen name="margin_std">16dp</dimen>
     <dimen name="margin_1_4">4dp</dimen>
     <dimen name="margin_2x">32dp</dimen>
 
